--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 I managed to build a clapack shared library for J, which includes the blas, 
-so there are no dependencies for end users. It assumes you have F2C, libm and 
-that's it.
+so there are no dependencies for end users. It assumes you have libm and 
+that's it. The CBLAS and F2Clib dependencies have been manually added
+to the library.
 
 Please excuse the Makefile mess; it was a quick hack. When linux migrates 
 to modern versions of lapack (3.4 and above), the j-lapacke build might be 
